tests/netconvert/import/XML/errors/broken_edge/edge#fromnode__missing1/errors.netconvert
Error: The from-node is not given for edge '1'.
Quitting (on error).
